# Letshwit

./: LICENSE  README.md  pyproject.toml
data/: classes.csv  homework.csv  ninja.csv
docs/: Makefile  data-structure.txt  notes.txt  proposal.md  report.md  reqs.txt  sources.bib  tasks.txt
examples/: evolve_text.py
src/: breed.py  classes.py  cli.py  data_importer.py  fitness.py  ga.py  generics.py  graph.py  main.py  models.py  tunables.py
