[tool.poetry]
name = "letshwit"
version = "0.1.0"
description = "A homework scheduler"
authors = ["Elias Gabriel <egabriel@olin.edu>, Dieter Brehm <dbrehm@olin.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
deap = "^1.3.1"
python-levenshtein = "^0.12.0"
tabulate = "^0.8.7"
black = "^19.10b0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
